# MLLibrary

./: .gitignore  CMakeLists.txt  Doxyfile.in  source.cmake
source/: main.cpp
source/classifiers/naive_bayes/: BayesHelper.h  NaiveBayes.cmake  NaiveBayes.cpp  NaiveBayes.h
source/feature_extractor/count_vectorizer/: CountVectorizer.cmake  CountVectorizer.cpp  CountVectorizer.h
source/feature_extractor/tokenizer/: StringTokenizer.cmake  StringTokenizer.cpp  StringTokenizer.h
source/feature_extractor/vocabulary/: Vocabulary.cmake  Vocabulary.cpp  Vocabulary.h
source/interfaces/: IMatrix.h  ITokenizer.h  IVectorizer.h  IVocabulary.h  interfaces.cmake
source/models/matrix/: Matrix.cmake  Matrix.h
test/: CMakeLists.txt  googletest.cmake  main.cpp
test/mocks/: mocks.cmake
test/tests/: BayesHelperTests.cpp  CountVectorizerTests.cpp  ExampleTests.cpp  MatrixTests.cpp  StringTokenizerTests.cpp  VocabularyTests.cpp  tests.cmake
